--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">RAWG Api Games</string>
+    <string name="title_game_example">Sea of Thieves</string>
+    <string name="title_game_example_2">Assassins Cred: Valhalla y la vegananza de Ezio Auditore</string>
+    <string name="rating_game">9.9</string>
 </resources>
